--- a/indicator-config/1-2-1.yml
+++ b/indicator-config/1-2-1.yml
@@ -26,7 +26,7 @@ national_geographical_coverage: ''
 page_content: ''
 permalink: ''
 precision: []
-reporting_status: notstarted
+reporting_status: not_applicable
 sort: ''
 standalone: false
 tags: []
